Makes interventions minimal CRUD working

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -3,9 +3,11 @@
 # - "backend/activities#create"
 # - "backend/activities#destroy"
 # - "backend/activities#edit"
+# - "backend/activities#index"
 # - "backend/activities#list"
 # - "backend/activities#list_productions"
 # - "backend/activities#new"
+# - "backend/activities#show"
 # - "backend/activities#update"
 # - "backend/affairs#attach"
 # - "backend/affairs#detach"
@@ -54,6 +56,7 @@
 # - "backend/animals#picture"
 # - "backend/animals#show"
 # - "backend/animals#update"
+# - "backend/areas#show"
 # - "backend/building_divisions#create"
 # - "backend/building_divisions#destroy"
 # - "backend/building_divisions#edit"
@@ -75,15 +78,19 @@
 # - "backend/catalog_prices#create"
 # - "backend/catalog_prices#destroy"
 # - "backend/catalog_prices#edit"
+# - "backend/catalog_prices#index"
 # - "backend/catalog_prices#list"
 # - "backend/catalog_prices#new"
+# - "backend/catalog_prices#show"
 # - "backend/catalog_prices#update"
 # - "backend/catalogs#create"
 # - "backend/catalogs#destroy"
 # - "backend/catalogs#edit"
+# - "backend/catalogs#index"
 # - "backend/catalogs#list"
 # - "backend/catalogs#list_prices"
 # - "backend/catalogs#new"
+# - "backend/catalogs#show"
 # - "backend/catalogs#update"
 # - "backend/cells/bank_chart_cells#show"
 # - "backend/cells/calendar_cells#show"
@@ -121,12 +128,16 @@
 # - "backend/cultivable_land_parcels#new"
 # - "backend/cultivable_land_parcels#show"
 # - "backend/cultivable_land_parcels#update"
+# - "backend/custom_field_choices#index"
+# - "backend/custom_field_choices#show"
 # - "backend/dashboards#list_my_future_events"
 # - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#search"
 # - "backend/dashboards#tools"
 # - "backend/dashboards#trade"
+# - "backend/districts#show"
 # - "backend/document_archives#show"
+# - "backend/document_templates#show"
 # - "backend/documents#create"
 # - "backend/documents#destroy"
 # - "backend/documents#edit"
@@ -136,24 +147,36 @@
 # - "backend/documents#new"
 # - "backend/documents#show"
 # - "backend/documents#update"
+# - "backend/entity_addresses#index"
 # - "backend/entity_addresses#show"
+# - "backend/entity_links#index"
 # - "backend/entity_links#show"
 # - "backend/equipments#list_intervention_casts"
+# - "backend/establishments#show"
+# - "backend/event_natures#show"
+# - "backend/events#show"
 # - "backend/gaps#create"
 # - "backend/gaps#destroy"
 # - "backend/gaps#edit"
+# - "backend/gaps#index"
 # - "backend/gaps#list"
 # - "backend/gaps#new"
+# - "backend/gaps#show"
 # - "backend/gaps#update"
 # - "backend/incidents#create"
 # - "backend/incidents#destroy"
 # - "backend/incidents#edit"
+# - "backend/incidents#index"
 # - "backend/incidents#list"
 # - "backend/incidents#list_interventions"
 # - "backend/incidents#new"
+# - "backend/incidents#show"
 # - "backend/incidents#update"
 # - "backend/incoming_deliveries#list_items"
+# - "backend/incoming_deliveries#show"
 # - "backend/incoming_delivery_items#new"
+# - "backend/incoming_delivery_modes#show"
+# - "backend/incoming_payment_modes#show"
 # - "backend/interfacers#autocomplete"
 # - "backend/interfacers#product_trackings"
 # - "backend/interfacers#product_units"
@@ -167,10 +190,12 @@
 # - "backend/interventions#create"
 # - "backend/interventions#destroy"
 # - "backend/interventions#edit"
+# - "backend/interventions#index"
 # - "backend/interventions#list"
 # - "backend/interventions#list_casts"
 # - "backend/interventions#list_operations"
 # - "backend/interventions#new"
+# - "backend/interventions#show"
 # - "backend/interventions#update"
 # - "backend/journal_entry_items#show"
 # - "backend/kujakus#toggle"
@@ -193,9 +218,12 @@
 # - "backend/legal_entities#create"
 # - "backend/legal_entities#destroy"
 # - "backend/legal_entities#edit"
+# - "backend/legal_entities#index"
 # - "backend/legal_entities#list"
 # - "backend/legal_entities#new"
+# - "backend/legal_entities#show"
 # - "backend/legal_entities#update"
+# - "backend/mandates#show"
 # - "backend/matters#create"
 # - "backend/matters#destroy"
 # - "backend/matters#edit"
@@ -223,6 +251,8 @@
 # - "backend/mineral_matters#new"
 # - "backend/mineral_matters#show"
 # - "backend/mineral_matters#update"
+# - "backend/observations#index"
+# - "backend/observations#show"
 # - "backend/operation_tasks#create"
 # - "backend/operation_tasks#destroy"
 # - "backend/operation_tasks#edit"
@@ -239,6 +269,8 @@
 # - "backend/organic_matters#new"
 # - "backend/organic_matters#show"
 # - "backend/organic_matters#update"
+# - "backend/outgoing_delivery_modes#show"
+# - "backend/outgoing_payment_modes#show"
 # - "backend/people#create"
 # - "backend/people#destroy"
 # - "backend/people#edit"
@@ -258,6 +290,7 @@
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
+# - "backend/plants#index"
 # - "backend/plants#list"
 # - "backend/plants#list_incidents"
 # - "backend/plants#list_indicators"
@@ -265,6 +298,7 @@
 # - "backend/plants#list_places"
 # - "backend/plants#new"
 # - "backend/plants#picture"
+# - "backend/plants#show"
 # - "backend/plants#update"
 # - "backend/preferences#create"
 # - "backend/preferences#destroy"
@@ -337,10 +371,12 @@
 # - "backend/product_nature_variants#create"
 # - "backend/product_nature_variants#destroy"
 # - "backend/product_nature_variants#edit"
+# - "backend/product_nature_variants#index"
 # - "backend/product_nature_variants#list"
 # - "backend/product_nature_variants#list_prices"
 # - "backend/product_nature_variants#list_products"
 # - "backend/product_nature_variants#new"
+# - "backend/product_nature_variants#show"
 # - "backend/product_nature_variants#update"
 # - "backend/product_natures#show"
 # - "backend/product_ownerships#create"
@@ -396,9 +432,11 @@
 # - "backend/professions#index"
 # - "backend/professions#list"
 # - "backend/professions#new"
+# - "backend/professions#show"
 # - "backend/professions#update"
 # - "backend/purchase_items#show"
 # - "backend/sale_items#show"
+# - "backend/sequences#show"
 # - "backend/services#create"
 # - "backend/services#destroy"
 # - "backend/services#edit"
@@ -416,19 +454,25 @@
 # - "backend/settlements#show"
 # - "backend/settlements#update"
 # - "backend/snippets#toggle"
+# - "backend/subscription_natures#show"
+# - "backend/subscriptions#show"
+# - "backend/taxes#show"
 # - "backend/teams#create"
 # - "backend/teams#destroy"
 # - "backend/teams#edit"
 # - "backend/teams#index"
 # - "backend/teams#list"
 # - "backend/teams#new"
+# - "backend/teams#show"
 # - "backend/teams#update"
 # - "backend/workers#create"
 # - "backend/workers#destroy"
 # - "backend/workers#edit"
+# - "backend/workers#index"
 # - "backend/workers#list"
 # - "backend/workers#list_intervention_casts"
 # - "backend/workers#new"
+# - "backend/workers#show"
 # - "backend/workers#update"
 
 # Access to the minimum
@@ -495,7 +539,7 @@ configure_company:
 - "backend/sequences#create"
 - "backend/sequences#destroy"
 - "backend/sequences#edit"
-- "backend/sequences#index" #?
+- "backend/sequences#index"
 - "backend/sequences#list"
 - "backend/sequences#load"
 - "backend/sequences#new"
@@ -609,7 +653,7 @@ manage_accounts:
 - "backend/accounts#list_journal_entry_items"
 - "backend/accounts#load"
 - "backend/accounts#new"
-- "backend/accounts#show" #?
+- "backend/accounts#show"
 - "backend/accounts#update"
 - "backend/dashboards#accountancy"
 
@@ -790,10 +834,10 @@ manage_equipments:
 - "backend/equipments#create"
 - "backend/equipments#destroy"
 - "backend/equipments#edit"
-- "backend/equipments#index" #?
+- "backend/equipments#index"
 - "backend/equipments#list"
 - "backend/equipments#new"
-- "backend/equipments#show" #?
+- "backend/equipments#show"
 - "backend/equipments#update"
 
 # Create and update estimates
@@ -1084,10 +1128,10 @@ manage_productions:
 - "backend/productions#create"
 - "backend/productions#destroy"
 - "backend/productions#edit"
-- "backend/productions#index" #?
+- "backend/productions#index"
 - "backend/productions#list"
 - "backend/productions#new"
-- "backend/productions#show" #?
+- "backend/productions#show"
 - "backend/productions#update"
 
 # Manage products
@@ -1120,7 +1164,7 @@ manage_purchases:
 - "backend/incoming_deliveries#create"
 - "backend/incoming_deliveries#destroy"
 - "backend/incoming_deliveries#edit"
-- "backend/incoming_deliveries#index" #?
+- "backend/incoming_deliveries#index"
 - "backend/incoming_deliveries#list"
 - "backend/incoming_deliveries#new"
 - "backend/incoming_deliveries#update"
@@ -1172,11 +1216,11 @@ manage_sales:
 - "backend/outgoing_deliveries#create"
 - "backend/outgoing_deliveries#destroy"
 - "backend/outgoing_deliveries#edit"
-- "backend/outgoing_deliveries#index" #?
+- "backend/outgoing_deliveries#index"
 - "backend/outgoing_deliveries#list"
 - "backend/outgoing_deliveries#list_items"
 - "backend/outgoing_deliveries#new"
-- "backend/outgoing_deliveries#show" #?
+- "backend/outgoing_deliveries#show"
 - "backend/outgoing_deliveries#update"
 - "backend/sales#abort"
 - "backend/sales#confirm"
