--- a/config/rights.yml
+++ b/config/rights.yml
@@ -30,7 +30,7 @@
 # - "backend/animal_groups#index"
 # - "backend/animal_groups#list"
 # - "backend/animal_groups#list_animals"
-# - "backend/animal_groups#list_place"
+# - "backend/animal_groups#list_places"
 # - "backend/animal_groups#new"
 # - "backend/animal_groups#show"
 # - "backend/animal_groups#update"
@@ -47,11 +47,11 @@
 # - "backend/animals#edit"
 # - "backend/animals#index"
 # - "backend/animals#list"
-# - "backend/animals#list_children"
-# - "backend/animals#list_group"
-# - "backend/animals#list_incident"
-# - "backend/animals#list_indicator"
-# - "backend/animals#list_place"
+# - "backend/animals#list_childrens"
+# - "backend/animals#list_groups"
+# - "backend/animals#list_incidents"
+# - "backend/animals#list_indicators"
+# - "backend/animals#list_places"
 # - "backend/animals#new"
 # - "backend/animals#picture"
 # - "backend/animals#show"
@@ -62,7 +62,7 @@
 # - "backend/building_divisions#edit"
 # - "backend/building_divisions#index"
 # - "backend/building_divisions#list"
-# - "backend/building_divisions#list_content_product"
+# - "backend/building_divisions#list_content_products"
 # - "backend/building_divisions#new"
 # - "backend/building_divisions#show"
 # - "backend/building_divisions#update"
@@ -187,6 +187,13 @@
 # - "backend/interfacers#toggle_view_mode"
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
+# - "backend/intervention_casts#create"
+# - "backend/intervention_casts#destroy"
+# - "backend/intervention_casts#edit"
+# - "backend/intervention_casts#index"
+# - "backend/intervention_casts#new"
+# - "backend/intervention_casts#show"
+# - "backend/intervention_casts#update"
 # - "backend/interventions#create"
 # - "backend/interventions#destroy"
 # - "backend/interventions#edit"
@@ -197,6 +204,8 @@
 # - "backend/interventions#new"
 # - "backend/interventions#show"
 # - "backend/interventions#update"
+# - "backend/journal_entries#index"
+# - "backend/journal_entries#list"
 # - "backend/journal_entry_items#show"
 # - "backend/kujakus#toggle"
 # - "backend/land_parcel_clusters#create"
