--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -55,12 +55,12 @@
 #
 custom_fields_001:
   active: true
-  column_name: "_test_field"
+  column_name: "_favorite_color"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   customized_type: Entity
   id: 1
-  name: "Test field"
+  name: "Favorite color"
   nature: "choice"
   required: false
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -68,7 +68,7 @@ custom_fields_001:
 
 custom_fields_002:
   active: true
-  column_name: "_useless_field"
+  column_name: "_useless"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   customized_type: Entity
