--- a/config/rights.yml
+++ b/config/rights.yml
@@ -39,6 +39,8 @@
 # - "backend/animal_medicines#edit"
 # - "backend/animal_medicines#index"
 # - "backend/animal_medicines#list"
+# - "backend/animal_medicines#list_indicators"
+# - "backend/animal_medicines#list_intervention_casts"
 # - "backend/animal_medicines#new"
 # - "backend/animal_medicines#show"
 # - "backend/animal_medicines#update"
@@ -47,10 +49,11 @@
 # - "backend/animals#edit"
 # - "backend/animals#index"
 # - "backend/animals#list"
-# - "backend/animals#list_childrens"
+# - "backend/animals#list_children"
 # - "backend/animals#list_groups"
 # - "backend/animals#list_incidents"
 # - "backend/animals#list_indicators"
+# - "backend/animals#list_intervention_casts"
 # - "backend/animals#list_places"
 # - "backend/animals#new"
 # - "backend/animals#picture"
@@ -124,6 +127,7 @@
 # - "backend/cultivable_land_parcels#index"
 # - "backend/cultivable_land_parcels#list"
 # - "backend/cultivable_land_parcels#list_contained_products"
+# - "backend/cultivable_land_parcels#list_intervention_casts"
 # - "backend/cultivable_land_parcels#list_productions"
 # - "backend/cultivable_land_parcels#new"
 # - "backend/cultivable_land_parcels#show"
@@ -293,6 +297,8 @@
 # - "backend/plant_medicines#edit"
 # - "backend/plant_medicines#index"
 # - "backend/plant_medicines#list"
+# - "backend/plant_medicines#list_indicators"
+# - "backend/plant_medicines#list_intervention_casts"
 # - "backend/plant_medicines#new"
 # - "backend/plant_medicines#show"
 # - "backend/plant_medicines#update"
