--- a/test/fixtures/cashes.yml
+++ b/test/fixtures/cashes.yml
@@ -31,7 +31,7 @@
 #  country              :string(2)
 #  created_at           :datetime         not null
 #  creator_id           :integer
-#  currency             :string(3)
+#  currency             :string(3)        not null
 #  iban                 :string(34)
 #  id                   :integer          not null, primary key
 #  journal_id           :integer          not null
@@ -50,6 +50,7 @@
 #   account_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   journal_id: 1
 #   mode: "Lorem ipsum"
