--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -20,7 +20,6 @@
 #
 # == Table: products
 #
-#  active                   :boolean          not null
 #  address_id               :integer
 #  asset_id                 :integer
 #  born_at                  :datetime
@@ -34,10 +33,12 @@
 #  default_storage_id       :integer
 #  derivative_of            :string(120)
 #  description              :text
-#  external                 :boolean          not null
 #  father_id                :integer
 #  id                       :integer          not null, primary key
 #  identification_number    :string(255)
+#  initial_arrival_cause    :string(120)
+#  initial_container_id     :integer
+#  initial_owner_id         :integer
 #  lock_version             :integer          default(0), not null
 #  mother_id                :integer
 #  name                     :string(255)      not null
@@ -62,11 +63,9 @@
 # == Fixture: products
 #
 # products_001:
-#   active: true
 #   content_maximal_quantity: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   external: true
 #   id: 1
 #   name: "Lorem ipsum"
 #   nature_id: 1
