--- a/test/fixtures/assets.yml
+++ b/test/fixtures/assets.yml
@@ -26,7 +26,7 @@
 #  charges_account_id      :integer
 #  created_at              :datetime         not null
 #  creator_id              :integer
-#  currency                :string(3)
+#  currency                :string(3)        not null
 #  current_amount          :decimal(19, 4)
 #  depreciable_amount      :decimal(19, 4)   not null
 #  depreciated_amount      :decimal(19, 4)   not null
@@ -56,6 +56,7 @@
 #   allocation_account_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   depreciable_amount: 0
 #   depreciated_amount: 0
 #   depreciation_method: "Lorem ipsum"
