--- a/test/fixtures/financial_years.yml
+++ b/test/fixtures/financial_years.yml
@@ -24,7 +24,7 @@
 #  code                  :string(20)       not null
 #  created_at            :datetime         not null
 #  creator_id            :integer
-#  currency              :string(3)
+#  currency              :string(3)        not null
 #  currency_precision    :integer
 #  id                    :integer          not null, primary key
 #  last_journal_entry_id :integer
@@ -42,6 +42,7 @@
 #   code: "Lorem ipsum"
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   started_on: 2009-07-19
 #   stopped_on: 2009-07-19
