--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -24,7 +24,7 @@
 #  code         :string(4)        not null
 #  created_at   :datetime         not null
 #  creator_id   :integer
-#  currency     :string(3)
+#  currency     :string(3)        not null
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
@@ -40,6 +40,7 @@
 #   code: "Lorem ipsum"
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
 #   nature: "Lorem ipsum"
