--- a/test/fixtures/purchase_natures.yml
+++ b/test/fixtures/purchase_natures.yml
@@ -24,7 +24,7 @@
 #  by_default      :boolean          not null
 #  created_at      :datetime         not null
 #  creator_id      :integer
-#  currency        :string(3)
+#  currency        :string(3)        not null
 #  description     :text
 #  id              :integer          not null, primary key
 #  journal_id      :integer
@@ -42,6 +42,7 @@
 #   by_default: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
