--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -27,7 +27,7 @@
 #  created_at          :datetime         not null
 #  created_on          :date
 #  creator_id          :integer
-#  currency            :string(3)
+#  currency            :string(3)        not null
 #  delivery_address_id :integer
 #  description         :text
 #  id                  :integer          not null, primary key
@@ -52,6 +52,7 @@
 #   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   number: "Lorem ipsum"
 #   pretax_amount: 0
