--- a/test/fixtures/sale_items.yml
+++ b/test/fixtures/sale_items.yml
@@ -26,7 +26,7 @@
 #  created_at           :datetime         not null
 #  creator_id           :integer
 #  credited_item_id     :integer
-#  currency             :string(3)
+#  currency             :string(3)        not null
 #  id                   :integer          not null, primary key
 #  indicator            :string(120)      not null
 #  label                :text
@@ -51,6 +51,7 @@
 #   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
 #   indicator: "Lorem ipsum"
 #   pretax_amount: 0
@@ -68,6 +69,7 @@ sale_items_001:
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 1
   indicator: 'population'
   sale_id: 1
@@ -83,6 +85,7 @@ sale_items_002:
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 2
   indicator: 'population'
   sale_id: 1
@@ -98,6 +101,7 @@ sale_items_003:
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 3
   indicator: 'population'
   sale_id: 2
@@ -113,6 +117,7 @@ sale_items_004:
   pretax_amount: 10
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 4
   indicator: 'population'
   sale_id: 3
@@ -127,6 +132,7 @@ sale_items_005:
   amount: 10
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 5
   indicator: 'population'
   pretax_amount: 10
