--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -32,7 +32,7 @@
 #  created_on          :date             not null
 #  creator_id          :integer
 #  credit              :boolean          not null
-#  currency            :string(3)
+#  currency            :string(3)        not null
 #  delivery_address_id :integer
 #  description         :text
 #  downpayment_amount  :decimal(19, 4)   default(0.0), not null
@@ -72,6 +72,7 @@
 #   created_on: 2009-07-19
 #   creator_id: 1
 #   credit: true
+#   currency: "Lorem ipsum"
 #   downpayment_amount: 0
 #   has_downpayment: true
 #   id: 1
@@ -83,6 +84,7 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 sales_001:
   address_id: 3
   affair_id: 1
@@ -115,6 +117,7 @@ sales_002:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
+  currency: 'EUR'
   downpayment_amount: 0
   expiration_delay: '1 month'
   expired_on: 2009-07-19
@@ -137,6 +140,7 @@ sales_003:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
+  currency: 'EUR'
   downpayment_amount: 0
   expiration_delay: '2 days'
   expired_on: 2009-07-19
@@ -159,6 +163,7 @@ sales_004:
   created_on: 2009-07-19
   creator_id: 1
   credit: false
+  currency: 'EUR'
   downpayment_amount: 0
   has_downpayment: false
   id: 4
