update model for outgoing delivery

--- a/test/fixtures/product_ownerships.yml
+++ b/test/fixtures/product_ownerships.yml
@@ -20,17 +20,20 @@
 #
 # == Table: product_ownerships
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  nature       :string(255)      not null
-#  owner_id     :integer
-#  product_id   :integer          not null
-#  started_at   :datetime
-#  stopped_at   :datetime
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at        :datetime         not null
+#  creator_id        :integer
+#  id                :integer          not null, primary key
+#  lock_version      :integer          default(0), not null
+#  move_id           :integer
+#  move_type         :string(255)
+#  nature            :string(255)      not null
+#  operation_task_id :integer
+#  owner_id          :integer
+#  product_id        :integer          not null
+#  started_at        :datetime
+#  stopped_at        :datetime
+#  updated_at        :datetime         not null
+#  updater_id        :integer
 #
 #
 # == Fixture: product_ownerships
