--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -20,16 +20,17 @@
 #
 # == Table: outgoing_delivery_items
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  delivery_id  :integer          not null
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  product_id   :integer          not null
-#  quantity     :decimal(19, 4)   default(1.0), not null
-#  sale_item_id :integer
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at        :datetime         not null
+#  creator_id        :integer
+#  delivery_id       :integer          not null
+#  id                :integer          not null, primary key
+#  lock_version      :integer          default(0), not null
+#  product_id        :integer          not null
+#  quantity          :decimal(19, 4)   default(1.0), not null
+#  sale_item_id      :integer
+#  source_product_id :integer          not null
+#  updated_at        :datetime         not null
+#  updater_id        :integer
 #
 #
 # == Fixture: outgoing_delivery_items
@@ -41,6 +42,7 @@
 #   id: 1
 #   product_id: 1
 #   quantity: 0
+#   source_product_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
