--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -46,6 +46,7 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 outgoing_delivery_items_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -53,5 +54,17 @@ outgoing_delivery_items_001:
   id: 1
   product_id: 10
   quantity: 0
+  source_product_id: 10
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+outgoing_delivery_items_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  delivery_id: 1
+  id: 2
+  product_id: 10
+  quantity: 1
+  source_product_id: 10
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
