--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -24,10 +24,12 @@
 #  closed_at    :datetime
 #  created_at   :datetime         not null
 #  creator_id   :integer
-#  description  :string(255)
+#  description  :text
+#  harvest_year :integer
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
+#  number       :string(60)       not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
@@ -40,6 +42,7 @@
 #   creator_id: 1
 #   id: 1
 #   name: "Lorem ipsum"
+#   number: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
