--- a/config/rights.yml
+++ b/config/rights.yml
@@ -74,6 +74,7 @@
 # - "backend/campaigns#edit"
 # - "backend/campaigns#index"
 # - "backend/campaigns#list"
+# - "backend/campaigns#list_productions"
 # - "backend/campaigns#new"
 # - "backend/campaigns#show"
 # - "backend/campaigns#update"
@@ -102,10 +103,14 @@
 # - "backend/cells/currents_stocks_by_product_nature_cells#show"
 # - "backend/cells/elapsed_interventions_times_by_activities_cells#show"
 # - "backend/cells/expense_chart_cells#show"
+# - "backend/cells/last_document_archives_cells#list"
+# - "backend/cells/last_document_archives_cells#show"
 # - "backend/cells/last_entities_cells#list"
 # - "backend/cells/last_entities_cells#show"
 # - "backend/cells/last_events_cells#list"
 # - "backend/cells/last_events_cells#show"
+# - "backend/cells/last_incidents_cells#list"
+# - "backend/cells/last_incidents_cells#show"
 # - "backend/cells/last_incoming_deliveries_cells#list"
 # - "backend/cells/last_incoming_deliveries_cells#show"
 # - "backend/cells/last_interventions_cells#show"
