--- a/installer/debian/apache.conf
+++ b/installer/debian/apache.conf
@@ -1,5 +1,4 @@
-RailsAutoDetect Off
-RailsBaseURI /ekylibre
+RackBaseURI /ekylibre
 <Directory /var/www/ekylibre>
         Options FollowSymLinks -MultiViews
 	Allow from all
