--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -52,6 +52,7 @@ campaigns_001:
   creator_id: 1
   id: 1
   name: "2012"
+  number: "2012"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -61,5 +62,6 @@ campaigns_002:
   creator_id: 1
   id: 2
   name: "2013"
+  number: "2013"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
