--- a/test/fixtures/bank_statements.yml
+++ b/test/fixtures/bank_statements.yml
@@ -24,6 +24,7 @@
 #  created_at   :datetime         not null
 #  creator_id   :integer
 #  credit       :decimal(19, 4)   default(0.0), not null
+#  currency     :string(3)        not null
 #  debit        :decimal(19, 4)   default(0.0), not null
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
@@ -41,6 +42,7 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   credit: 0
+#   currency: "Lorem ipsum"
 #   debit: 0
 #   id: 1
 #   number: "Lorem ipsum"
@@ -55,6 +57,7 @@ bank_statements_001:
   creator_id: 1
   credit: 0
   debit: 0
+  currency: "EUR"
   id: 1
   number: "000000000001"
   started_on: 2009-06-19
@@ -68,6 +71,7 @@ bank_statements_002:
   creator_id: 1
   credit: 0
   debit: 0
+  currency: "EUR"
   id: 2
   number: "000000000002"
   started_on: 2009-07-19
