--- a/test/fixtures/deposits.yml
+++ b/test/fixtures/deposits.yml
@@ -33,7 +33,7 @@
 #  lock_version     :integer          default(0), not null
 #  locked           :boolean          not null
 #  mode_id          :integer          not null
-#  number           :string(255)
+#  number           :string(255)      not null
 #  payments_count   :integer          default(0), not null
 #  responsible_id   :integer
 #  updated_at       :datetime         not null
@@ -52,6 +52,7 @@
 #   in_cash: true
 #   locked: true
 #   mode_id: 1
+#   number: "Lorem ipsum"
 #   payments_count: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
