--- a/test/fixtures/operation_task_casts.yml
+++ b/test/fixtures/operation_task_casts.yml
@@ -18,25 +18,52 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: operation_tasks
+# == Table: operation_task_casts
 #
+#  actor_id     :integer          not null
+#  actor_type   :string(255)      not null
 #  created_at   :datetime         not null
 #  creator_id   :integer
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
-#  nature       :string(255)      not null
-#  operation_id :integer          not null
-#  parent_id    :integer
-#  prorated     :boolean          not null
+#  name         :string(255)      not null
+#  task_id      :integer          not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
-require 'test_helper'
+#
+# == Fixture: operation_task_casts
+#
+# operation_task_casts_001:
+#   actor_id: 1
+#   actor_type: "Lorem ipsum"
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   name: "Lorem ipsum"
+#   task_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-class OperationTaskTest < ActiveSupport::TestCase
+operation_task_casts_001:
+  actor_id: 1
+  actor_type: "Product"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "product"
+  task_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-  test "presence of fixtures" do
-    # assert_equal 2, OperationTask.count
-  end
-
-end
+operation_task_casts_002:
+  actor_id: 2
+  actor_type: "Product"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "localizable"
+  task_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
