--- a/test/fixtures/operation_tasks.yml
+++ b/test/fixtures/operation_tasks.yml
@@ -20,21 +20,16 @@
 #
 # == Table: operation_tasks
 #
-#  created_at         :datetime         not null
-#  creator_id         :integer
-#  expression         :text
-#  id                 :integer          not null, primary key
-#  indicator_datum_id :integer
-#  lock_version       :integer          default(0), not null
-#  operand_id         :integer
-#  operand_quantity   :decimal(19, 4)
-#  operation_id       :integer          not null
-#  parent_id          :integer
-#  prorated           :boolean          not null
-#  subject_id         :integer          not null
-#  updated_at         :datetime         not null
-#  updater_id         :integer
-#  verb               :string(255)      not null
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  nature       :string(255)      not null
+#  operation_id :integer          not null
+#  parent_id    :integer
+#  prorated     :boolean          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
 # == Fixture: operation_tasks
@@ -43,20 +38,29 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   nature: "Lorem ipsum"
 #   operation_id: 1
 #   prorated: true
-#   subject_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   verb: "Lorem ipsum"
 #
+
 operation_tasks_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  nature: "move_to"
   operation_id: 1
-  prorated: true
-  subject_id: 1
+  prorated: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  verb: "consume"
+
+operation_tasks_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  nature: "move_in"
+  operation_id: 1
+  prorated: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
