--- a/test/fixtures/account_balances.yml
+++ b/test/fixtures/account_balances.yml
@@ -23,6 +23,7 @@
 #  account_id        :integer          not null
 #  created_at        :datetime         not null
 #  creator_id        :integer
+#  currency          :string(255)      not null
 #  financial_year_id :integer          not null
 #  global_balance    :decimal(19, 4)   default(0.0), not null
 #  global_count      :integer          default(0), not null
@@ -44,6 +45,7 @@
 #   account_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   financial_year_id: 1
 #   global_balance: 0
 #   global_count: 0
@@ -57,16 +59,37 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 account_balances_001:
   account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   financial_year_id: 1
   global_balance: 0
   global_count: 0
   global_credit: 0
   global_debit: 0
   id: 1
+  local_balance: 0
+  local_count: 0
+  local_credit: 0
+  local_debit: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+
+account_balances_002:
+  account_id: 2
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  currency: "EUR"
+  financial_year_id: 2
+  global_balance: 0
+  global_count: 0
+  global_credit: 0
+  global_debit: 0
+  id: 2
   local_balance: 0
   local_count: 0
   local_credit: 0
