--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -26,6 +26,7 @@
 #  contour                :string(255)
 #  created_at             :datetime         not null
 #  creator_id             :integer
+#  derivative_of          :string(120)
 #  frozen_indicators      :text
 #  horizontal_rotation    :integer          default(0), not null
 #  id                     :integer          not null, primary key
@@ -33,6 +34,7 @@
 #  name                   :string(255)
 #  nature_id              :integer          not null
 #  nature_name            :string(255)      not null
+#  nomen                  :string(120)
 #  number                 :string(255)
 #  picture_content_type   :string(255)
 #  picture_file_name      :string(255)
@@ -42,6 +44,7 @@
 #  updated_at             :datetime         not null
 #  updater_id             :integer
 #  variable_indicators    :text
+#  variety                :string(120)      not null
 #
 #
 # == Fixture: product_nature_variants
@@ -58,6 +61,7 @@
 #   unit_name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   variety: "Lorem ipsum"
 #
 
 product_nature_variants_001:
@@ -72,6 +76,7 @@ product_nature_variants_001:
   nature_name: "Lorem ipsum"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
+  variety: "bos"
 
 product_nature_variants_002:
   active: true
@@ -85,6 +90,7 @@ product_nature_variants_002:
   nature_name: "Lorem ipsum"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
+  variety: "bos"
 
 product_nature_variants_004:
   active: true
@@ -98,4 +104,5 @@ product_nature_variants_004:
   nature_name: "Building"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
+  variety: "building"
 
