--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -20,21 +20,21 @@
 #
 # == Table: productions
 #
-#  activity_id       :integer          not null
-#  campaign_id       :integer          not null
-#  created_at        :datetime         not null
-#  creator_id        :integer
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  name              :string(255)      not null
-#  position          :integer
-#  product_nature_id :integer
-#  started_at        :datetime
-#  state             :string(255)      not null
-#  static_support    :boolean          not null
-#  stopped_at        :datetime
-#  updated_at        :datetime         not null
-#  updater_id        :integer
+#  activity_id    :integer          not null
+#  campaign_id    :integer          not null
+#  created_at     :datetime         not null
+#  creator_id     :integer
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  name           :string(255)      not null
+#  position       :integer
+#  started_at     :datetime
+#  state          :string(255)      not null
+#  static_support :boolean          not null
+#  stopped_at     :datetime
+#  updated_at     :datetime         not null
+#  updater_id     :integer
+#  variant_id     :integer
 #
 #
 # == Fixture: productions
@@ -59,7 +59,7 @@ productions_001:
   id: 1
   name: "Wheat 2013"
   state: "started"
-  product_nature_id: 1
+  variant_id: 1
   static_support: true
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -72,7 +72,7 @@ productions_002:
   id: 2
   name: "Wheat 2014"
   state: "draft"
-  product_nature_id: 2
+  variant_id: 2
   static_support: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
