Introduces product_measurements table

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -180,6 +180,7 @@
 # - "backend/incidents#list"
 # - "backend/incidents#list_interventions"
 # - "backend/incidents#new"
+# - "backend/incidents#picture"
 # - "backend/incidents#show"
 # - "backend/incidents#update"
 # - "backend/incoming_deliveries#list_items"
@@ -235,14 +236,6 @@
 # - "backend/land_parcel_groups#new"
 # - "backend/land_parcel_groups#show"
 # - "backend/land_parcel_groups#update"
-# - "backend/legal_entities#create"
-# - "backend/legal_entities#destroy"
-# - "backend/legal_entities#edit"
-# - "backend/legal_entities#index"
-# - "backend/legal_entities#list"
-# - "backend/legal_entities#new"
-# - "backend/legal_entities#show"
-# - "backend/legal_entities#update"
 # - "backend/mandates#show"
 # - "backend/matters#create"
 # - "backend/matters#destroy"
@@ -295,14 +288,6 @@
 # - "backend/organic_matters#update"
 # - "backend/outgoing_delivery_modes#show"
 # - "backend/outgoing_payment_modes#show"
-# - "backend/people#create"
-# - "backend/people#destroy"
-# - "backend/people#edit"
-# - "backend/people#index"
-# - "backend/people#list"
-# - "backend/people#new"
-# - "backend/people#show"
-# - "backend/people#update"
 # - "backend/plant_medicines#create"
 # - "backend/plant_medicines#destroy"
 # - "backend/plant_medicines#edit"
@@ -385,6 +370,8 @@
 # - "backend/product_nature_categories#edit"
 # - "backend/product_nature_categories#index"
 # - "backend/product_nature_categories#list"
+# - "backend/product_nature_categories#list_product_natures"
+# - "backend/product_nature_categories#list_products"
 # - "backend/product_nature_categories#new"
 # - "backend/product_nature_categories#show"
 # - "backend/product_nature_categories#update"
@@ -406,6 +393,8 @@
 # - "backend/product_nature_variants#new"
 # - "backend/product_nature_variants#show"
 # - "backend/product_nature_variants#update"
+# - "backend/product_natures#list_product_nature_variants"
+# - "backend/product_natures#list_products"
 # - "backend/product_natures#show"
 # - "backend/product_ownerships#create"
 # - "backend/product_ownerships#destroy"
