--- a/test/fixtures/incidents.yml
+++ b/test/fixtures/incidents.yml
@@ -20,21 +20,25 @@
 #
 # == Table: incidents
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :text
-#  gravity      :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  nature       :string(255)      not null
-#  observed_at  :datetime         not null
-#  priority     :integer
-#  state        :string(255)
-#  target_id    :integer          not null
-#  target_type  :string(255)      not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at           :datetime         not null
+#  creator_id           :integer
+#  description          :text
+#  gravity              :integer
+#  id                   :integer          not null, primary key
+#  lock_version         :integer          default(0), not null
+#  name                 :string(255)      not null
+#  nature               :string(255)      not null
+#  observed_at          :datetime         not null
+#  picture_content_type :string(255)
+#  picture_file_name    :string(255)
+#  picture_file_size    :integer
+#  picture_updated_at   :datetime
+#  priority             :integer
+#  state                :string(255)
+#  target_id            :integer          not null
+#  target_type          :string(255)      not null
+#  updated_at           :datetime         not null
+#  updater_id           :integer
 #
 #
 # == Fixture: incidents
