--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -20,25 +20,29 @@
 #
 # == Table: product_natures
 #
-#  abilities           :text
-#  active              :boolean          not null
-#  category_id         :integer          not null
-#  created_at          :datetime         not null
-#  creator_id          :integer
-#  derivative_of       :string(120)
-#  description         :text
-#  evolvable           :boolean          not null
-#  frozen_indicators   :text
-#  id                  :integer          not null, primary key
-#  lock_version        :integer          default(0), not null
-#  name                :string(255)      not null
-#  nomen               :string(120)
-#  number              :string(30)       not null
-#  population_counting :string(255)      not null
-#  updated_at          :datetime         not null
-#  updater_id          :integer
-#  variable_indicators :text
-#  variety             :string(120)      not null
+#  abilities            :text
+#  active               :boolean          not null
+#  category_id          :integer          not null
+#  created_at           :datetime         not null
+#  creator_id           :integer
+#  derivative_of        :string(120)
+#  description          :text
+#  evolvable            :boolean          not null
+#  frozen_indicators    :text
+#  id                   :integer          not null, primary key
+#  lock_version         :integer          default(0), not null
+#  name                 :string(255)      not null
+#  nomen                :string(120)
+#  number               :string(30)       not null
+#  picture_content_type :string(255)
+#  picture_file_name    :string(255)
+#  picture_file_size    :integer
+#  picture_updated_at   :datetime
+#  population_counting  :string(255)      not null
+#  updated_at           :datetime         not null
+#  updater_id           :integer
+#  variable_indicators  :text
+#  variety              :string(120)      not null
 #
 #
 # == Fixture: product_natures
