Checks roles during procedures loading

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -237,17 +237,7 @@
 # - "backend/land_parcel_groups#show"
 # - "backend/land_parcel_groups#update"
 # - "backend/mandates#show"
-# - "backend/matters#create"
-# - "backend/matters#destroy"
-# - "backend/matters#edit"
-# - "backend/matters#index"
 # - "backend/matters#list"
-# - "backend/matters#list_groups"
-# - "backend/matters#list_places"
-# - "backend/matters#new"
-# - "backend/matters#picture"
-# - "backend/matters#show"
-# - "backend/matters#update"
 # - "backend/medicines#create"
 # - "backend/medicines#destroy"
 # - "backend/medicines#edit"
@@ -448,6 +438,7 @@
 # - "backend/products#list_members"
 # - "backend/products#list_places"
 # - "backend/products#new"
+# - "backend/products#picture"
 # - "backend/products#show"
 # - "backend/products#update"
 # - "backend/professions#create"
